<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_text">CITY</string>
    <string name="temp_now_initial">10</string>
    <string name="precipitation_now_initial">sunny</string>
    <string name="date_initial">date</string>
    <string name="today_text">Today</string>
    <string name="temperature_at_day_text">temperature at day</string>
    <string name="temperature_at_night_text">temperature at night</string>
    <string name="chance_of_rain_text">сhance of rain</string>
    <string name="wind_text">wind speed</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="update_text">UPDATE</string>
    <string name="change_city_text">CHANGE CITY</string>
    <string name="temp_celsius">%d "\u2103"</string>
    <string name="temp_celsius_string">%s "\u2103"</string>
    <string name="chance_of_rain_template">%d %%</string>
    <string name="chance_of_rain_template_string">%s %%</string>
    <string name="wind_template">%d m "/" s</string>
    <string name="wind_template_string">%s m "/" s</string>
    <string name="pressure_template">%d mm</string>
    <string name="pressure_template_string">%s mm</string>
    <string name="pressure_text">pressure</string>
    <string name="confirm_selection">confirm selection</string>
    <string name="additional_settings">additional settings</string>
    <string name="select_city">select city</string>
    <string name="history_button_text">HISTORY</string>
    <string name="history_data_list">%s "/" %s "\u2103" "/" %s </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_change_city">Change city</string>
    <string name="menu_history">History</string>

    <string name="exclamation">Important message!</string>
    <string name="button">OK</string>
    <string name="network_error">Check your internet connection</string>

    <string name="weather_sunny">sunny</string>
    <string name="weather_clear_night">clear night</string>
    <string name="weather_foggy">foggy</string>
    <string name="weather_cloudy">cloudy</string>
    <string name="weather_rainy">rainy</string>
    <string name="weather_snowy">cnowy</string>
    <string name="weather_thunder">thunder</string>
    <string name="weather_drizzle">drizzle</string>
    <string name="my_location_text">MY LOCATION</string>

</resources>
