<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeCityActivity">

    <TextView
        android:id="@+id/select_city_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/select_city"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintBottom_toBottomOf="@+id/enter_city_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <EditText
        android:id="@+id/enter_city_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/city_text"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/select_city_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/wind_speed_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/wind_text"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintBottom_toTopOf="@+id/pressure_checkBox"
        app:layout_constraintStart_toStartOf="@+id/pressure_checkBox" />

    <CheckBox
        android:id="@+id/pressure_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="32dp"
        android:text="@string/pressure_text"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintBottom_toTopOf="@+id/confirm_selection_button"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/additional_settings"
        android:textSize="@dimen/basic_size_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wind_speed_checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/wind_speed_checkBox" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_history"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:foregroundGravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_city_editText" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirm_selection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_selection"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>