<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.changecity.ChangeCityFragment">




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:errorEnabled="true"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_city_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_city"
            android:lines="1"
            android:textSize="@dimen/basic_size_text" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/wind_speed_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/wind_text"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintBottom_toTopOf="@+id/pressure_checkBox"
        app:layout_constraintStart_toStartOf="@+id/pressure_checkBox" />

    <CheckBox
        android:id="@+id/pressure_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="32dp"
        android:text="@string/pressure_text"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintBottom_toTopOf="@+id/confirm_selection_button"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/additional_settings"
        android:textSize="@dimen/basic_size_text"
        android:textStyle="bold"
        style="@style/HeadersStartEnd"
        app:layout_constraintBottom_toTopOf="@+id/wind_speed_checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/wind_speed_checkBox" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_history"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_selection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="4dp"
        android:text="@string/confirm_selection"
        android:textSize="@dimen/basic_size_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>