<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_text"
            android:textSize="@dimen/city_size_text"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/precipitation_now_imageView"
                android:layout_width="183dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/temp_now_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/temp_now_initial"
                android:textSize="@dimen/temp_now_sise_text"
                android:gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/precipitation_now_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precipitation_now_initial"
            android:textSize="@dimen/basic_size_text"
            android:gravity="center"/>

        <TextView
            android:id="@+id/date_now_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_initial"
            android:textSize="@dimen/basic_size_text"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/today_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/today_text"
            android:textSize="@dimen/basic_size_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp_at_day_today_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_at_day_text"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/temp_at_nihght_today_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_at_night_text"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/chance_of_rain_today_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chance_of_rain_text"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/wind_today_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_text"
                    android:textSize="@dimen/basic_size_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp_at_day_today_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="20"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/temp_at_night_today_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="10"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/chance_of_rain_today_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="10%"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/wind_today_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="5"
                    android:textSize="@dimen/basic_size_text" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tomorrow_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tomorrow_text"
            android:textSize="@dimen/basic_size_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp_at_day_tomorrow_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_at_day_text"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/temp_at_night_tomorrow_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_at_night_text"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/chance_of_rain_tomorrow_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chance_of_rain_text"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/wind_tomorrow_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_text"
                    android:textSize="@dimen/basic_size_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp_at_day_tomorrow_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="22"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/temp_at_night_tomorrow_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="12"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/chance_of_rain_tomorrow_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="20%"
                    android:textSize="@dimen/basic_size_text" />

                <TextView
                    android:id="@+id/wind_tomorrow_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="7"
                    android:textSize="@dimen/basic_size_text" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_text" />

        <Button
            android:id="@+id/change_city_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_city_text" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>